--- a/preview/index.html
+++ b/preview/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Preview iconfont</title>
-  <link rel="stylesheet" href="icons/icons.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="./icons/icons.css">
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <i class="iconfoo iconfoo-home"></i>
