--- a/preview/index.html
+++ b/preview/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Preview iconfont</title>
-  <link rel="stylesheet" href="./icons/icons.css">
-  <link rel="stylesheet" href="./main.css">
-</head>
-<body>
-  <i class="iconfoo iconfoo-home"></i>
-  <i class="iconfoo iconfoo-house2"></i>
-  <i class="iconfoo iconfoo-web-page-home"></i>
-</body>
+  <head>
+    <title>Preview incons</title>
+    <link rel="stylesheet" href="./icons/icons.css">
+    <link rel="stylesheet" href="main.css">
+  </head>
+  <body><i class="iconfoo iconfoo-home"></i><i class="iconfoo iconfoo-house2"></i><i class="iconfoo iconfoo-web-page-home"></i>
+  </body>
 </html>
