update file pug

--- a/preview/index.html
+++ b/preview/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="./icons/icons.css">
     <link rel="stylesheet" href="main.css">
   </head>
-  <body><i class="iconfoo iconfoo-home"></i><i class="iconfoo iconfoo-house2"></i><i class="iconfoo iconfoo-web-page-home"></i>
+  <body>
+    <div class="box"><i class="iconfoo iconfoo-home"></i><code>.iconfoo iconfoo-home</code></div>
+    <div class="box"><i class="iconfoo iconfoo-house2"></i><code>.iconfoo iconfoo-house2</code></div>
+    <div class="box"><i class="iconfoo iconfoo-web-page-home"></i><code>.iconfoo iconfoo-web-page-home</code></div>
   </body>
 </html>
